k8s-configs/istio/external-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-services
spec:
  hosts:
  - dev.somniumlabs.net
  - hooks.slack.com
  ports:
  - number: 5672
    name: amqp
    protocol: TCP
  - number: 7001
    name: redis-7001
    protocol: TCP
  - number: 7002
    name: redis-7002
    protocol: TCP
  - number: 7003
    name: redis-7003
    protocol: TCP
  - number: 27017
    name: mongodb
    protocol: TCP
  - number: 443
    name: https-slack
    protocol: HTTPS
  location: MESH_EXTERNAL
